--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <link rel="icon" href="icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <div class="bio-container">
         <div class="avatar-container">
             <img src="avatar.jpg" alt="Аватар пользователя">
