--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizzy <33</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.ico" type="image/x-icon">
+    <title>виззи</title>
 </head>
 <body>
-    <link rel="icon" href="icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
     <div class="bio-container">
         <div class="avatar-container">
             <img src="avatar.jpg" alt="Аватар пользователя">
