--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizzy <33</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon.ico" type="image/x-icon">
-    <title>виззи</title>
 </head>
 <body>
     <div class="bio-container">
+
         <div class="bio-details">
+            <img src="avatar.jpg" alt="Аватар пользователя">
             <h2>Wizzy <33</h2>
             <p>Бро реально любит шедевропайтон и не СРАТЕР БЛЯТЬ</p>
             <div class="buttons">
@@ -21,7 +20,6 @@
             </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
